@@ -1,0 +1,93 @@
+#!/bin/sh
+
+#
+# ā \304\201    ē \304\223    ī \304\253     ō \305\215     ū \305\253   
+# á \303\241    é \303\251    í \303\255     ó \303\263     ú \303\272   
+# ǎ \307\216    ě \304\233    ǐ \307\220     ǒ \307\222     ǔ \307\224   
+# à \303\240    è \303\250    ì \303\254     ò \303\262     ù \303\271   
+#               È \303\210
+#
+
+sed_it () {
+	sed \
+	-e 's/"Jia3"/"Ji\\307\\216"/g' \
+	-e 's/"Yi3"/"Y\\307\\220"/g' \
+	-e 's/"Bing3"/"B\\307\\220ng"/g' \
+	-e 's/"Ding1"/"D\\304\\253ng"/g' \
+	-e 's/"Wu4"/"W\\303\\271"/g' \
+	-e 's/"Ji3"/"J\\307\\220"/g' \
+	-e 's/"Geng1"/"G\\304\\223ng"/g' \
+	-e 's/"Xin1"/"X\\304\\253n"/g' \
+	-e 's/"Ren2"/"R\\303\\251n"/g' \
+	-e 's/"Gui3"/"Gu\\307\\220"/g' \
+	-e 's/"Zi3"/"Z\\307\\220"/g' \
+	-e 's/"Chou3"/"Ch\\307\\222u"/g' \
+	-e 's/"Yin2"/"Y\\303\\255n"/g' \
+	-e 's/"Mao3"/"M\\307\\216o"/g' \
+	-e 's/"Chen2"/"Ch\\303\\251n"/g' \
+	-e 's/"Si4"/"S\\303\\254"/g' \
+	-e 's/"Wu3"/"W\\307\\224"/g' \
+	-e 's/"Wei4"/"W\\303\\250i"/g' \
+	-e 's/"Shen1"/"Sh\\304\\223n"/g' \
+	-e 's/"You3"/"Y\\307\\222u"/g' \
+	-e 's/"Xu1"/"X\\305\\253"/g' \
+	-e 's/"Hai4"/"H\\303\\240i"/g' \
+	-e 's/"Chu1Yi1"/"Ch\\305\\253y\\304\\253"/g' \
+	-e 's/"Chu1Er4"/"Ch\\305\\253\\303\\250r"/g' \
+	-e 's/"Chu1San1"/"Ch\\305\\253s\\304\\201n"/g' \
+	-e 's/"Chu1Si4"/"Ch\\305\\253s\\303\\254"/g' \
+	-e 's/"Chu1Wu3"/"Ch\\305\\253w\\307\\224"/g' \
+	-e 's/"Chu1Liu4"/"Ch\\305\\253li\\303\\271"/g' \
+	-e 's/"Chu1Qi1"/"Ch\\305\\253q\\304\\253"/g' \
+	-e 's/"Chu1Ba1"/"Ch\\305\\253b\\304\\201"/g' \
+	-e 's/"Chu1Jiu3"/"Ch\\305\\253ji\\307\\224"/g' \
+	-e 's/"Chu1Shi2"/"Ch\\305\\253sh\\303\\255"/g' \
+	-e 's/"Shi2Yi1"/"Sh\\303\\255y\\304\\253"/g' \
+	-e 's/"Shi2Er4"/"Sh\\303\\255\\303\\250r"/g' \
+	-e 's/"Shi1San1"/"Sh\\303\\255s\\304\\201n"/g' \
+	-e 's/"Shi1Si4"/"Sh\\303\\255s\\303\\254"/g' \
+	-e 's/"Shi1Wu3"/"Sh\\303\\255w\\307\\224"/g' \
+	-e 's/"Shi1Liu4"/"Sh\\303\\255li\\303\\271"/g' \
+	-e 's/"Shi1Qi1"/"Sh\\303\\255q\\304\\253"/g' \
+	-e 's/"Shi1Ba1"/"Sh\\303\\255b\\304\\201"/g' \
+	-e 's/"Shi1Jiu3"/"Sh\\303\\255ji\\307\\224"/g' \
+	-e 's/"Er4Shi2"/"\\303\\210rsh\\303\\255"/g' \
+	-e 's/"Er4Yi1"/"\\303\\210ry\\304\\253"/g' \
+	-e 's/"Er4Er4"/"\\303\\210r\\303\\250r"/g' \
+	-e 's/"Er4San1"/"\\303\\210rs\\304\\201n"/g' \
+	-e 's/"Er4Si4"/"\\303\\210rs\\303\\254"/g' \
+	-e 's/"Er4Wu3"/"\\303\\210rw\\307\\224"/g' \
+	-e 's/"Er4Liu4"/"\\303\\210rli\\303\\271"/g' \
+	-e 's/"Er4Qi1"/"\\303\\210rq\\304\\253"/g' \
+	-e 's/"Er4Ba1"/"\\303\\210rb\\304\\201"/g' \
+	-e 's/"Er4Jiu3"/"\\303\\210rji\\307\\224"/g' \
+	-e 's/"San1Shi2"/"S\\304\\201nsh\\303\\255"/g' \
+	-e 's/"ling2"/"l\\303\\255ng"/g' \
+	-e 's/"yi1"/"y\\304\\253"/g' \
+	-e 's/"er4"/"\\303\\250r"/g' \
+	-e 's/"san1"/"s\\304\\201n"/g' \
+	-e 's/"si4"/"s\\303\\254"/g' \
+	-e 's/"wu3"/"w\\307\\224"/g' \
+	-e 's/"liu6"/"li\\303\\271"/g' \
+	-e 's/"qi1"/"q\\304\\253"/g' \
+	-e 's/"ba1"/"b\\304\\201"/g' \
+	-e 's/"jiu3"/"ji\\307\\224"/g' \
+	-e 's/"shi2"/"sh\\303\\255"/g' \
+	-e 's/"run4"/"R\\303\\271n"/g' \
+	$@
+}
+
+sed_calendar () {
+	sed \
+	-e 's/Zhou1/zh\\305\\215u/g' \
+	-e 's/"Shi2Er2Yue4"/"Sh\\303\\255\\303\\250ryu\\303\\250"/g' \
+        -e 's/"Nian %(shengxiao) %(Y60)%(M60)%(D60)"/"Ni\\303\\241n %(shengxiao) %(Y60)%(M60)%(D60)"/g' \
+	$@
+}
+
+sed_it -i lunar/lunar-date.c
+sed_it -i po/zh_CN.po
+
+sed_calendar -i lunar/calendar.patch
+sed_calendar -i lunar/lunar-calendar.c
+sed_calendar -i po/zh_CN.po
